# tratativa-base-455

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  test.py  tratativa_455.xlsx
bases/: CSVRCS01941199RCS[1]111324.sswweb
functions/: __init__.py  ctrc.py  login.py  open_chrome.py  tratativa_base_156.py  validar_arquivos.py
logs/: Lote 0-100 - Erro Importação.xlsx  Lote 100-200 - Erro Importação.xlsx  Lote 200-300 - Erro Importação.xlsx  Lote 2400-2500 - Erro Importação.xlsx  Lote 300-400 - Erro Importação.xlsx  Lote 400-500 - Erro Importação.xlsx  Lote 500-600 - Erro Importação.xlsx
treatments/: __init__.py  treatment_455.py  treatment_file_455.py
